--- a/HTML/HTML_Tutorial.tex
+++ b/HTML/HTML_Tutorial.tex
@@ -35,83 +35,145 @@
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
 \definecolor{backcolour}{rgb}{0.95,0.95,0.92}
 \definecolor{orange}{RGB}{255,127,0}
+\definecolor{lightgray}{rgb}{0.95, 0.95, 0.95}
+\definecolor{darkgray}{rgb}{0.4, 0.4, 0.4}
+%\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
+\definecolor{editorGray}{rgb}{0.95, 0.95, 0.95}
+\definecolor{editorOcher}{rgb}{1, 0.5, 0} % #FF7F00 -> rgb(239, 169, 0)
+\definecolor{editorGreen}{rgb}{0, 0.5, 0} % #007C00 -> rgb(0, 124, 0)
+\definecolor{orange}{rgb}{1,0.45,0.13}		
+\definecolor{olive}{rgb}{0.17,0.59,0.20}
+\definecolor{brown}{rgb}{0.69,0.31,0.31}
+\definecolor{purple}{rgb}{0.38,0.18,0.81}
+\definecolor{lightblue}{rgb}{0.1,0.57,0.7}
+\definecolor{lightred}{rgb}{1,0.4,0.5}
 \pagecolor{white}
 \graphicspath{ {./images/} }
 \setlength{\fboxsep}{1pt}
-
 
 \lstdefinelanguage{Comment}{
   identifierstyle=\color{white},
   sensitive=false,
 }
 
-\lstdefinelanguage{HTML5}{
-        language=html,
-        sensitive=true, 
-        alsoletter={<>=-},
-        otherkeywords={
-        % HTML tags
-        <html>, <head>, 
-        <title>, </title>, 
-        <meta, />, </head>, 
-        <body>, </body>, 
-        <p>, </p>, 
-        <div>, </div>, 
-        <h1>, </h1>,
-        <br>, 
-        <ul>, </ul>, 
-        <li>, </li>,
-        <ol>, </ol>, 
-        <img, />, 
-        <video, </video>, 
-        <canvas, \/canvas>, 
-        <script>, </script>, 
-      	</html>, <!, html>, 
-	<style>, </style>, 
-	><, 
-	<div, 
-	<strong>, </strong>, 
-	<em>, </em>, 
-	<a>, </a>, <a
-        },  
-        %ndkeywords={
-        % General
-        % =,
-        % HTML attributes
-        %charset=, id=, width=, height=,
-        % CSS properties
-        %border:, transform:, -moz-transform:, transition-duration:, transition-property:, transition-timing-function:
-        %},  
-        morecomment=[s]{<!--}{-->},
-        %tag=[s]
+% CSS
+\lstdefinelanguage{CSS}{
+  keywords={color,background-image:,margin,padding,font,weight,display,position,top,left,right,bottom,list,style,border,size,white,space,min,width, transition:, transform:, transition-property, transition-duration, transition-timing-function},	
+  sensitive=true,
+  morecomment=[l]{//},
+  morecomment=[s]{/*}{*/},
+  morestring=[b]',
+  morestring=[b]",
+  alsoletter={:},
+  alsodigit={-}
 }
 
-\lstset{
-    language={HTML5},
-    backgroundcolor=\color{backcolour},
-    basicstyle={\small\ttfamily},   
-    frame=l,
-    % Line numbers
-    xleftmargin={0.5cm},
-    numbers=left,
-    stepnumber=1,
-    firstnumber=1,
-    numberfirstline=true,
-    % Code design   
-    numberstyle=\tiny\color{codegray},
-    ndkeywordstyle=\color{codegreen}\bfseries,
-    keywordstyle=\color{blue},
-    commentstyle=\color{gray},
-    stringstyle=\color{mauve},
-    escapeinside={(*@}{@*)}, 
-    % Code
-    %alsodigit={.:;},
-    %tabsize=2,
-    %showtabs=false,
-    %showspaces=false,
-    %showstringspaces=false,
-    %extendedchars=true,
-    %breaklines=true,        
+% JavaScript
+\iffalse
+\lstdefinelanguage{JavaScript}{
+  morekeywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, while, do, else, case, break},
+  morecomment=[s]{/*}{*/},
+  morecomment=[l]//,
+  morestring=[b]",
+  morestring=[b]'
+}
+\fi
+
+\lstdefinelanguage{HTML5}{
+  language=html,
+  sensitive=true,	
+  alsoletter={<>=-},	
+  morecomment=[s]{<!-}{-->},
+  tag=[s],
+  otherkeywords={
+  % General
+  >,
+  % Standard tags
+	<!DOCTYPE,
+  </html, <html, <head, <title, </title, <style, </style, <link, </head, <meta, />,
+	% body
+	</body, <body,
+	% Divs
+	</div, <div, </div>, 
+	% Paragraphs
+	</p, <p, </p>,
+	% scripts
+	</script, <script,
+	% 
+	<h1, </h1,
+	<span, </span,
+	<strong, </strong,
+	<em, </em, 
+	<br, 
+	<ul, </ul, 
+	<li, </li, 
+	<ol, </ol, 
+	<img, 
+	</video, 
+	html>, 
+	<a, </a, 
+	<table, </table,
+	<tr, </tr, 
+	<td, </td, 
+	<th, </th, 
+	<tbody, </tbody, 
+	<thead, </thead, 
+	<tfoot, </tfoot, 
+  % More tags...
+  <canvas, /canvas>, <svg, <rect, <animateTransform, </rect>, </svg>, <video, <source, <iframe, </iframe>, </video>, <image, </image>, <header, </header, <article, </article
+  },
+  ndkeywords={
+  % General
+  =,
+  % HTML attributes
+  charset=, src=, id=, width=, height=, style=, type=, rel=, href=, alt=, controls, target=, border=, colspan=, rowspan=, scope=, 
+  % SVG attributes
+  fill=, attributeName=, begin=, dur=, from=, to=, poster=, controls=, x=, y=, repeatCount=, xlink:href=,
+  % properties
+  margin:, padding:, background-image:, border:, top:, left:, position:, width:, height:, margin-top:, margin-bottom:, font-size:, line-height:, font-family:, text-align:, 
+	% CSS3 properties
+  transform:, -moz-transform:, -webkit-transform:,
+  animation:, -webkit-animation:,
+  transition:,  transition-duration:, transition-property:, transition-timing-function:,
+  }
+}
+
+\lstset {%
+  % General design
+  backgroundcolor=\color{backcolour},
+  basicstyle={\small\ttfamily},   
+  %frame=b,
+  % line-numbers
+  xleftmargin={0.75cm},
+  numbers=left,
+  stepnumber=1,
+  firstnumber=1,
+  numberfirstline=true,	
+  % Code design
+  identifierstyle=\color{black},
+  keywordstyle=\color{blue}\bfseries,
+  ndkeywordstyle=\color{editorGreen}\bfseries,
+  stringstyle=\color{editorOcher}\ttfamily,
+  commentstyle=\color{brown}\ttfamily,
+  % Code
+  language=HTML5,
+  %alsolanguage=JavaScript,
+  alsodigit={.:;},	
+  tabsize=2,
+  showtabs=false,
+  showspaces=false,
+  showstringspaces=false,
+  extendedchars=true,
+  breaklines=true,
+  % German umlauts
+  literate=%
+  {Ö}{{\"O}}1
+  {Ä}{{\"A}}1
+  {Ü}{{\"U}}1
+  {ß}{{\ss}}1
+  {ü}{{\"u}}1
+  {ä}{{\"a}}1
+  {ö}{{\"o}}1
 }
 
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
@@ -208,7 +270,7 @@ One of the key HTML elements we use to build a webpage is the \textit{body} elem
 Once the file has a body, many different types of content – including text, images, and buttons – can be added to the body.
 \begin{lstlisting}
 <body>
-  <p>What's up, doc?</p>
+  <p>Hello, doc!</p>
 </body>
 \end{lstlisting}
 
@@ -399,7 +461,7 @@ All of the elements we have learned about so far (headings, paragraphs, lists, a
 
 The \colorbox{lightgray}{<img>} tag allows us to add an image to a web page. Most elements require both opening and closing tags, but the \colorbox{lightgray}{<img>} tag is a self-closing tag. Note that the end of the \colorbox{lightgray}{<img>} tag has a forward slash \colorbox{lightgray}{/}. Self-closing tags may include or omit the final slash — both will render properly.
 \begin{lstlisting}
-<img src="image-location.jpg" (*@/@*)>
+<img src="image-location.jpg" >
 \end{lstlisting}
 The \colorbox{lightgray}{<img>} tag has a required \textit{attribute} called \colorbox{lightgray}{src}. The \colorbox{lightgray}{src} attribute must be set to the image’s \textit{source}, or the location of the image. In this case, the value of \colorbox{lightgray}{src} must be the \textit{uniform resource locator} (URL) of the image. A URL is the web address or local address where a file is stored.
 
@@ -408,7 +470,7 @@ Part of being an exceptional web developer is making our site accessible to user
 
 The \colorbox{lightgray}{alt} attribute, which means alternative text, brings meaning to the images on our sites. The \colorbox{lightgray}{alt} attribute can be added to the image tag just like the \colorbox{lightgray}{src} attribute. The value of \colorbox{lightgray}{alt} should be a description of the image.
 \begin{lstlisting}
-<img src="#" alt="A(*@ @*)field of yellow sunflowers" (*@/@*)>
+<img src="#" alt="A field of yellow sunflowers">
 \end{lstlisting}
 The \colorbox{lightgray}{alt} attribute also serves the following purposes:
 \begin{itemize}[leftmargin = *]
@@ -526,13 +588,13 @@ One of the powerful aspects of HTML (and the Internet), is the ability to \texti
 
 We can add links to a web page by adding an \textit{anchor} element \colorbox{lightgray}{<a>} and including the text of the link in between the opening and closing tags.
 \begin{lstlisting}
-<a>This Is A Link To Wikipedia</a>
+<a>This Is a Link To Wikipedia</a>
 \end{lstlisting}
 Technically, the link in the example above is incomplete. The link above cannot work because there is no URL that will lead users to the actual Wikipedia page. 
 
 The anchor element in the example above is incomplete without the \colorbox{lightgray}{href} attribute. This attribute stands for \textit{hyperlink reference} and is used to link to a \textit{path}, or the address to where a file is located (whether it is on your computer or another location). The paths provided to the \colorbox{lightgray}{href} attribute are often URLs.
 \begin{lstlisting}
-<a href="https://www.wikipedia.org/">This Is A Link To Wikipedia</a>
+<a href="https://www.wikipedia.org/">This Is a Link To Wikipedia</a>
 \end{lstlisting}
 In the example above, the \colorbox{lightgray}{href} attribute has been set to the value of the URL \colorbox{lightgray}{https://www.wikipedia.org/}. The example now shows the correct use of an anchor element.
 
@@ -698,6 +760,287 @@ Let us review what we have learned:
 \item Comments are written in HTML using the following syntax: \colorbox{lightgray}{<!-- comment -->}.
 \end{itemize}
 
+\section{HTML Tables}
+\subsection{Introduction to Tables}
+There are many websites on the Internet that display information like stock prices, sports scores, invoice data, and more. This data is naturally tabular in nature, meaning that a table is often the best way of presenting the data. Now we will learn how to use the HTML \colorbox{lightgray}{<table>} element to present information in a two-dimensional table to the users.
+
+\subsection{Create a Table}
+Before displaying data, we must first create the table that will contain the data by using the \colorbox{lightgray}{<table>} element.
+\begin{lstlisting}
+<table>
+
+</table>
+\end{lstlisting}
+The \colorbox{lightgray}{<table>} element will contain all of the tabular data we plan on displaying.
+
+\subsection{Table Rows}
+In many programs that use tables, the table is already predefined for you, meaning that it contains the \href{https://en.wikipedia.org/wiki/Table_(information)}{rows, columns, and cells that will hold data}. In HTML, all of these components must be created.
+
+The first step in entering data into the table is to add rows using the table row element: \colorbox{lightgray}{<tr>}.
+\begin{lstlisting}
+<table>
+  <tr>
+  </tr>
+  <tr>
+  </tr>
+</table>
+\end{lstlisting}
+In the example above, two rows have been added to the table.
+
+\subsection{Table Data}
+Rows are not sufficient to add data to a table. Each cell element must also be defined. In HTML, you can add data using the \textit{table data} element: \colorbox{lightgray}{<td>}.
+\begin{lstlisting}
+<table>
+  <tr>
+    <td>73</td>
+    <td>81</td>
+  </tr>
+</table>
+\end{lstlisting}
+In the example above, two data points (\colorbox{lightgray}{73} and \colorbox{lightgray}{81}) were entered in the one row that exists. By adding two data points, we created two cells of data.
+
+If the table were displayed in the browser, it would show a table with one row and two columns.
+
+\subsection{Table Headings}
+Table data does not make much sense without titles to describe what the data represents.
+
+To add titles to rows and columns, you can use the table heading element: \colorbox{lightgray}{<th>}.
+
+The table heading element is used just like a table data element, except with a relevant title. Just like table data, a table heading must be placed within a table row.
+\begin{lstlisting}
+<table>
+  <tr>
+    <th></th>
+    <th scope="col">Saturday</th>
+    <th scope="col">Sunday</th>
+  </tr>
+  <tr>
+    <th scope="row">Temperature</th>
+    <td>73</td>
+    <td>81</td>
+  </tr>
+</table>
+\end{lstlisting}
+
+First, a new row was added to hold the three headings: a blank heading, a \colorbox{lightgray}{Saturday} heading, and a \colorbox{lightgray}{Sunday} heading. The blank heading creates the extra table cell necessary to align the table headings correctly over the data they correspond to.
+
+In the second row, one table heading was added as a row title: \colorbox{lightgray}{Temperature}.
+
+Note, also, the use of the scope attribute, which can take one of two values:
+\begin{enumerate}[leftmargin = *]
+\item \colorbox{lightgray}{row} - this value makes it clear that the heading is for a row.
+\item \colorbox{lightgray}{col} - this value makes it clear that the heading is for a column.
+\end{enumerate}
+HTML code for tables may look a little strange at first, but analyzing it piece by piece helps make the code more understandable.
+
+\subsection{Table Borders}
+So far, the tables we have created have been a little difficult to read because they have no borders.
+
+In older versions of HTML, a border could be added to a table using the \colorbox{lightgray}{border} attribute and setting it equal to an integer. This integer would represent the thickness of the border.
+\begin{lstlisting}
+<table border="1">
+  <tr>
+    <td>73</td>
+    <td>81</td>
+  </tr>
+</table>
+\end{lstlisting}
+The code in the example above is \href{https://en.wikipedia.org/wiki/Deprecation}{deprecated}, so please do not use it. It is meant to illustrate older conventions you may come across when reading other developers’ code.
+
+The browser will likely still interpret your code correctly if you use the \colorbox{lightgray}{border} attribute, but that does not mean the attribute should be used.
+
+We use CSS to add style to HTML documents, because it helps us to separate the structure of a page from how it looks. You can achieve the same table border effect using CSS.
+\begin{lstlisting}
+table, td {
+  border: 1px solid black;
+}
+\end{lstlisting}
+The code in the example above uses CSS instead of HTML to show table borders.
+
+\subsection{Spanning Columns}
+Next let us investigate the case where the table contains data that spans multiple columns. 
+
+For example, a personal calendar could have events that span across multiple hours, or even multiple days.
+
+Data can span columns using the \colorbox{lightgray}{colspan} attribute. The attributes accepts an integer (greater than or equal to 1) to denote the number of columns it spans across.
+\begin{lstlisting}
+<table>
+  <tr>
+    <th>Monday</th>
+    <th>Tuesday</th>
+    <th>Wednesday</th>
+  </tr>
+  <tr>
+    <td colspan="2">Out of Town</td>
+    <td>Back in Town</td>
+  </tr>
+</table>
+\end{lstlisting}
+In the example above, the data \colorbox{lightgray}{Out of Town} spans the \colorbox{lightgray}{Monday} and \colorbox{lightgray}{Tuesday} table headings using the value \colorbox{lightgray}{2} (two columns). The data \colorbox{lightgray}{Back in Town} appear only under the \colorbox{lightgray}{Wednesday} heading.
+
+\subsection{Spanning Rows}
+Data can also span multiple rows using the \colorbox{lightgray}{rowspan} attribute.
+
+The \colorbox{lightgray}{rowspan} attribute is used for data that spans multiple rows (perhaps an event goes on for multiple hours on a certain day). It accepts an integer (greater than or equal to 1) to denote the number of rows it spans across.
+\begin{lstlisting}
+<table>
+  <tr> <!-- Row 1 -->
+    <th></th>
+    <th>Saturday</th>
+    <th>Sunday</th>
+  </tr>
+  <tr> <!-- Row 2 -->
+    <th>Morning</th>
+    <td rowspan="2">Work</td>
+    <td rowspan="3">Relax</td>
+  </tr>
+  <tr> <!-- Row 3 -->
+    <th>Afternoon</th>
+  </tr>
+  <tr> <!-- Row 4 -->
+    <th>Evening</th>
+    <td>Dinner</td>
+  </tr>
+</table>
+\end{lstlisting}
+In the example above, there are four rows:
+\begin{enumerate}[leftmargin = *]
+\item The first row contains an empty cell and the two column headings.
+\item The second row contains the \colorbox{lightgray}{Morning} row heading, along with \colorbox{lightgray}{Work}, which spans two rows under the \colorbox{lightgray}{Saturday} column. The “Relax” entry spans three rows under the \colorbox{lightgray}{Sunday} column.
+\item The third row only contains the \colorbox{lightgray}{Afternoon} row heading.
+\item The fourth row only contains the \colorbox{lightgray}{Dinner} entry, since “Relax” spans into the cell next to it.
+\end{enumerate}
+\begin{figure}[H]
+\includegraphics[scale = 0.7]{3_1}
+\centering
+\end{figure}
+
+\subsection{Table Body}
+Over time, a table can grow to contain a lot of data and become very long. When this happens, the table can be sectioned off so that it is easier to manage.
+
+Long tables can be sectioned off using the \textit{table body} element: \colorbox{lightgray}{<tbody>}.
+
+The \colorbox{lightgray}{<tbody>} element should contain all of the table’s data, excluding the table headings.
+\begin{lstlisting}
+<table>
+  <tbody>
+    <tr>
+      <th></th>
+      <th>Saturday</th>
+      <th>Sunday</th>
+    </tr>
+    <tr>
+      <th>Morning</th>
+      <td rowspan="2">Work</td>
+      <td rowspan="3">Relax</td>
+    </tr>
+    <tr>
+     <th>Afternoon</th>
+    </tr>
+    <tr>
+      <th>Evening</th>
+      <td>Dinner</td>
+    </tr>
+  </tbody>
+</table>
+\end{lstlisting}
+In the example above, all of the table data is contained within a table body element. Note, however, that the headings were also kept in the table’s body.
+
+\subsection{Table Head}
+Previously, the table’s headings were kept inside of the table’s body. When a table’s body is sectioned off, however, it also makes sense to section off the table’s column headings using the \colorbox{lightgray}{<thead>} element.
+\begin{lstlisting}
+<table>
+  <thead>
+    <tr>
+      <th></th>
+      <th scope="col">Saturday</th>
+      <th scope="col">Sunday</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Morning</th>
+      <td rowspan="2">Work</td>
+      <td rowspan="3">Relax</td>
+    </tr>
+    <tr>
+     <th scope="row">Afternoon</th>
+    </tr>
+    <tr>
+      <th scope="row">Evening</th>
+      <td>Dinner</td>
+    </tr>
+  </tbody>
+</table>
+\end{lstlisting}
+In the example above, the only new element is \colorbox{lightgray}{<thead>}. The table headings are contained inside of this element. Note that the table’s head still requires a row in order to contain the table headings.
+
+Additionally, only the \textbf{column} headings go under the \colorbox{lightgray}{<thead>} element. We can use the \colorbox{lightgray}{scope} attribute on \colorbox{lightgray}{<th>} elements to indicate whether a \colorbox{lightgray}{<th>} element is being used as a \colorbox{lightgray}{"row"} heading or a \colorbox{lightgray}{"col"} heading.
+
+\subsection{Table Footer}
+The bottom part of a long table can also be sectioned off using the \colorbox{lightgray}{<tfoot>} element.
+\begin{lstlisting}
+<table>
+  <thead>
+    <tr>
+      <th>Quarter</th>
+      <th>Revenue</th>
+      <th>Costs</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>Q1</th>
+      <td>$10M</td>
+      <td>$7.5M</td>
+    </tr>
+    <tr>
+      <th>Q2</th>
+      <td>$12M</td>
+      <td>$5M</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th>Total</th>
+      <td>$22M</td>
+      <td>$12.5M</td>
+    </tr>
+  </tfoot>
+</table>
+\end{lstlisting}
+In the example above, the footer contains the totals of the data in the table. Footers are often used to contain sums, differences, and other data results.
+
+\subsection{Styling with CSS}
+Tables, by default, are very bland. They have no borders, the font color is black, and the typeface is the same type used for other HTML elements.
+
+We can use CSS to style tables. Specifically, we can style the various aspects mentioned above.
+\begin{lstlisting}
+table, th, td {
+  border: 1px solid black;
+  font-family: Arial, sans-serif;
+  text-align: center;
+}
+\end{lstlisting}
+The code in the example above demonstrates just some of the various table aspects we can style using CSS properties.
+
+\subsection{Review}
+We learned how to create a table, add data to it, and section the table into smaller parts that make it easier to read.
+
+Let is review what this chapter covered:
+\begin{itemize}[leftmargin = *]
+\item The \colorbox{lightgray}{<table>} element creates a table.
+\item The \colorbox{lightgray}{<tr>} element adds rows to a table.
+\item To add data to a row, you can use the \colorbox{lightgray}{<td>} element.
+\item Table headings clarify the meaning of data. Headings are added with the \colorbox{lightgray}{<th>} element.
+\item Table data can span columns using the \colorbox{lightgray}{colspan} attribute.
+\item Table data can span rows using the \colorbox{lightgray}{rowspan} attribute.
+\item Tables can be split into three main sections: a head, a body, and a footer.
+\item A table’s head is created with the \colorbox{lightgray}{<thead>} element.
+\item A table’s body is created with the \colorbox{lightgray}{<tbody>} element.
+\item A table’s footer is created with the \colorbox{lightgray}{<tfoot>} element.
+\item All the CSS properties you learned about in this course can be applied to tables and their data.
+\end{itemize}
 
 
 \end{document}
