--- a/HTML/HTML_Tutorial.tex
+++ b/HTML/HTML_Tutorial.tex
@@ -119,6 +119,7 @@
 	<tbody, </tbody, 
 	<thead, </thead, 
 	<tfoot, </tfoot, 
+	<form, </form,
   % More tags...
   <canvas, /canvas>, <svg, <rect, <animateTransform, </rect>, </svg>, <video, <source, <iframe, </iframe>, </video>, <image, </image>, <header, </header, <article, </article
   },
@@ -126,7 +127,7 @@
   % General
   =,
   % HTML attributes
-  charset=, src=, id=, width=, height=, style=, type=, rel=, href=, alt=, controls, target=, border=, colspan=, rowspan=, scope=, 
+  charset=, src=, id=, width=, height=, style=, type=, rel=, href=, alt=, controls, target=, border=, colspan=, rowspan=, scope=, action=, method=, 
   % SVG attributes
   fill=, attributeName=, begin=, dur=, from=, to=, poster=, controls=, x=, y=, repeatCount=, xlink:href=,
   % properties
@@ -760,7 +761,9 @@ Let us review what we have learned:
 \item Comments are written in HTML using the following syntax: \colorbox{lightgray}{<!-- comment -->}.
 \end{itemize}
 
+\newpage
 \section{HTML Tables}
+Now we will learn how to use tables to present tabular data to users.
 \subsection{Introduction to Tables}
 There are many websites on the Internet that display information like stock prices, sports scores, invoice data, and more. This data is naturally tabular in nature, meaning that a table is often the best way of presenting the data. Now we will learn how to use the HTML \colorbox{lightgray}{<table>} element to present information in a two-dimensional table to the users.
 
@@ -1041,6 +1044,49 @@ Let is review what this chapter covered:
 \item A table’s footer is created with the \colorbox{lightgray}{<tfoot>} element.
 \item All the CSS properties you learned about in this course can be applied to tables and their data.
 \end{itemize}
+
+\newpage
+\section{HTML Forms}
+Now we will cover how to add a \colorbox{lightgray}{<form>} element populated with various elements that accept input on a web page.
+\subsection{Introduction to HTML Forms}
+Forms are a part of everyday life. When we use a physical form in real life, we write down information and give it to someone to process. Think of the times you have had to fill out information for various applications like a job, or a bank account, or dropped off a completed suggestion card — each instance is a form.
+
+Just like a physical form, an HTML \colorbox{lightgray}{<form>} element is responsible for collecting information to send somewhere else. Every time we browse the internet we come into contact with many forms and we might not even realize it. There is a good chance that if we are typing into a text field or providing an input, the field that we are typing into is part of a \colorbox{lightgray}{<form>}.
+
+Now we will go over the structure and syntax of a \colorbox{lightgray}{<form>} and the many elements that populate it.
+
+\subsection{How a Form Works}
+We can think of the internet as a network of computers which send and receive information. Computers need an \textit{HTTP request} to know how to communicate. The HTTP request instructs the receiving computer how to handle the incoming information. More information can be found in the article about \href{https://www.codecademy.com/articles/http-requests}{HTTP requests}.
+
+The \colorbox{lightgray}{<form>} element is a great tool for collecting information, but then we need to send that information somewhere else for processing. We need to supply the \colorbox{lightgray}{<form>} element with both the location of where the \colorbox{lightgray}{<form>}'s information goes and what HTTP request to make. Take a look at the sample \colorbox{lightgray}{<form>} below:
+\begin{lstlisting}
+<form action="/example.html" method="POST">
+</form>
+\end{lstlisting}
+In the above example, we have created the skeleton for a \colorbox{lightgray}{<form>} that will send information to \textbf{example.html} as a POST request:
+\begin{itemize}[leftmargin = *]
+\item The \colorbox{lightgray}{action} attribute determines where the information is sent.
+\item The \colorbox{lightgray}{method} attribute is assigned a HTTP verb that is included in the HTTP request.
+\end{itemize}
+Note: HTTP verbs like POST do not need to be capitalized for the request to work, but it is done so out of convention. In the example above we could have written \colorbox{lightgray}{method="post"} and it would still work.
+
+The \colorbox{lightgray}{<form>} element can also contain child elements. For instance, it would be helpful to provide a header so that users know what this \colorbox{lightgray}{<form>} is about. We could also add a paragraph to provide even more detail. Let us see an example of this in code:
+\begin{lstlisting}
+<form action="/example.html" method="POST">
+  <h1>Creating a form</h1>
+  <p>Looks like you want to learn how to create an HTML form. Well, the best way to learn is to play around with it.</p>
+</form>
+\end{lstlisting}
+
+
+
+
+
+
+
+
+
+
 
 
 \end{document}
